fixed overflow problem on staff section by changing design, added hover effect to community section links

--- a/src/components/generic/ButtonRound/buttonRound.module.scss
+++ b/src/components/generic/ButtonRound/buttonRound.module.scss
@@ -3,12 +3,11 @@
 .Button {
 	position: relative;
 	flex-shrink: 0;
-	height: 70px;
-	width: 70px;
 	background-color: $color-background-main;
 	@include flex-center;
 	border-radius: 50%;
 	cursor: pointer;
+	transition: $transition-regular;
 
 	&:active {
 		opacity: 0.8;
@@ -17,15 +16,48 @@
 	.Arrow {
 		// position: absolute;
 		font-family: 'Koho', serif;
-		font-size: 50px;
-		font-weight: 900;
 		color: white;
 		width: 100%;
-		// height: 100%;
 		line-height: 1;
 		text-align: center;
-		transform: translate(3px, -5px);
-
+		// height: 100%;
 		// vertical-align: top;
 	}
+}
+
+.large {
+	height: 70px;
+	width: 70px;
+
+	.Arrow {
+		font-size: 50px;
+		font-weight: 900;
+	}
+}
+
+.medium {
+	height: 60px;
+	width: 60px;
+	.Arrow {
+		font-size: 45px;
+		font-weight: 900;
+	}
+}
+
+.small {
+	height: 50px;
+	width: 50px;
+	.Arrow {
+		font-size: 40px;
+		font-weight: 900;
+	}
+}
+
+.Active {
+	background-color: $color-blue;
+}
+
+.Disabled {
+	background-color: rgba($color: $color-background-main, $alpha: 0.5);
+	cursor: default;
 }
