--- a/src/components/sections/About/about.module.scss
+++ b/src/components/sections/About/about.module.scss
@@ -132,6 +132,23 @@
 				&:nth-child(2n) {
 					background-color: $color-grey-light;
 				}
+
+				position: relative;
+				width: 100%;
+				height: 100%;
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				padding: 0 5%;
+
+				.Article {
+					height: 100%;
+					width: 60%;
+					display: flex;
+					flex-direction: row;
+					align-items: center;
+					justify-content: flex-start;
+				}
 			}
 		}
 
